Added endpoint to get current system version.
Besides modified documentation.yaml, deleted /api prefix from all paths.
